<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70000000"
    android:gravity="center"
    android:orientation="vertical">
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_18_ffffff" 
        android:text="@string/alert_mode_detecting"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/text_18_ffffff" 
        android:text="@string/alert_aiming_face"/>
    
    <TextView
        android:id="@+id/btn_close"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        style="@style/text_18_000000"
        android:background="@drawable/select_mode_item_selector"
        android:gravity="center"
        android:text="@string/cancel" />
    
</LinearLayout>
