<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        
    <ImageView 
        android:id="@+id/face_rect_border"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:background="@drawable/white_rectangle"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#70ffffff"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView 
            android:id="@+id/guide_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_20_000000"
            android:text="@string/desc_search_face"/>    
        
        <TextView 
	        android:id="@+id/btn_take_photo"
	        android:layout_width="180dp"
	        android:layout_height="40dp"
	        android:layout_marginTop="10dp"
	        android:gravity="center"
	        style="@style/text_20_000000"
	        android:background="@drawable/btn_close_guide_selector"
	        android:text="@string/take_photo"/>
          
    	<TextView 
	        android:id="@+id/btn_close"
	        android:layout_width="180dp"
	        android:layout_height="40dp"
	        android:layout_marginTop="10dp"
	        android:gravity="center"
	        style="@style/text_20_000000"
	        android:background="@drawable/btn_close_guide_selector"
	        android:text="@string/close"/>  
	              
    </LinearLayout>
</FrameLayout>
